@@ -1,3 +1,8 @@
+2011-04-16  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/gfxmenu/gui_image.c (rescale_image): Don't attempt to scale
+	to negative size.
+
 2011-04-13  Colin Watson  <cjwatson@ubuntu.com>
 
 	* util/grub.d/10_linux.in: Add rootflags=subvol=<name> if / is on a
